--- a/PineApple_Light.css
+++ b/PineApple_Light.css
@@ -435,7 +435,7 @@ th {
 }
 @media screen and (min-width: 320px) {
   body {
-    background-color: black;
+    background-color: white;
   }
   h1 {
     color: black;
@@ -444,7 +444,7 @@ th {
 /* Tablet Ipad*/
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   body {
-    background-color: black;
+    background-color: white;
   }
   h1 {
     color: white;
@@ -453,13 +453,13 @@ th {
 /* Desktops and Laptops*/
 @media screen and(min-width:1224px) and (max-width: 1823) {
   body {
-    background-color: black;
+    background-color: white;
   }
 }
 /* Large Scren*/
 @media screen and(min-width:1824px) {
   body {
-    background-color: black;
+    background-color: white;
   }
   h1 {
     color: white;
